--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node src/index.js",
+    "start": "node dist/index.js",
     "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express-handlebars": "^5.2.0",
+    "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-handlebars": "^3.1.0",
     "@types/node": "^14.14.25",
+    "@types/socket.io": "^2.1.13",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
