--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "ServerTStoJS5": "node_modules/.bin/tsc --outDir es5/ --target es5 && node es5/index.js",
+    "ServerES6toJS5": "node_modules/.bin/tsc --outDir es6/ --target es6 && babel es6 -d es5 && node es5/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.9",
     "@types/express": "^4.17.11",
     "@types/express-handlebars": "^3.1.0",
     "@types/node": "^14.14.25",
