--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-preset-env": "^1.7.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "socket.io": "^3.1.1"
+    "knex": "^0.95.2",
+    "socket.io": "^3.1.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.13.9",
